--- a/index.html
+++ b/index.html
@@ -10,17 +10,16 @@
 
 <body>
 <!-- Bandsite Nav -->
-    <section class="nav">
-        <div class="nav-logo">
+<div class="nav-logo">
     
-        </div>
-
+</div>
+    <section class="nav">
         <div class="nav-bar">
-            <div class="nav-bar__link1">
-                <a class="nav-bar__links" href="#"><li>Biography</li></a>
+            <div class="nav-bar__link">
+                <a class="nav-bar__links" href="#">Biography</a>
             </div>
             <div class="nav-bar__link">
-                <a class="nav-bar__links" href="#"><li>Shows</li></a>
+                <a class="nav-bar__links" href="#">Shows</a>
             </div>
         </div>
     </section>
@@ -41,7 +40,6 @@
             <p class="about-quote__quote">“We push each other to be the best. It’s not uncommon for 
                 one of us to say ‘this needs to be better, back to the 
                 drawing board’”
-                - Bryan Teddy, lead vocalist of The Bees Knees
             </p>
 
             <p class="about-quote__author">
@@ -49,7 +47,7 @@
             </p>
 
             <h3 class="about-quote__the-bees">The Bees Knees</h3>
-            <p>
+            <p class="about-text">
                 The Bees Knees is a pop rock band originating from San
                 Francisco, California. The band consists of lead vocalist
                 an Teddy, guitarist Mack Tolkens, guitarist Andrew Green, 
@@ -129,7 +127,7 @@
                 </div>
              
 
-                <article class="footer-info__socails">
+                <article class="footer-info__socials">
                     <ul class="footer-list">
                         <li class="footer-list__name1">Cam Adams</li>
                         <li class="footer-list__name2">The Bees Knees Management</li>
