added scss to mobile, Footer still needs work

--- a/index.html
+++ b/index.html
@@ -25,14 +25,16 @@
 
     <!-- Hero-Section -->
     <section class="hero">
-        <h1 class="hero-title">The Bees Knees</h1>
-        <a href="index.html"><img src="assets/Images/hero-bio.jpg" class="hero-title__img" alt="hero-img"></a>
+        <h1 class="hero__title">The Bees Knees</h1>
+        <div class="hero-img">
+            <img src = "assets/Images/hero-bio.jpg" class="hero__img" alt="hero__img">
+        </div>
     </section>
 
     <!-- About-Section -->
     <section class="about">
-        <h1 class="about-title">About the Musicians</h1>
-        <div class="about-img">
+        <h1 class="about__header">About the Musicians</h1>
+        <div class="about-band">
             <img src="assets/Images/band.jpg" class="about-band__img" alt="band-img">
         </div>
 
@@ -82,35 +84,35 @@
     </section>
 
     <!-- Photos-Section -->
-    <section class="photos">
-        <h1 class="photos-title">Photo Gallery</h1>
-        <div class="photos-img">
-            <div class="photos-imgs">
-                <img src="assets/Images/Photo-gallery-1.jpg" class="photos-imgs__" alt="photos-img">
+    <section class="photo">
+        <h1 class="photo-title">Photo Gallery</h1>
+        <div class="photo-imgs">
+            <div class="photo-img__">
+                <img src="assets/Images/Photo-gallery-1.jpg" class="photo-img__img" alt="photos-img">
             </div>
-            <div class="photos-imgs">
-                <img src="assets/Images/Photo-gallery-2.jpg" class="photos-imgs__" alt="photos-img">
+            <div class="photo-img__">
+                <img src="assets/Images/Photo-gallery-2.jpg" class="photo-img__img" alt="photos-img">
             </div>
-            <div class="photos-imgs">
-                <img src="assets/Images/Photo-gallery-3.jpg" class="photos-imgs__" alt="photos-img">
+            <div class="photo-img__">
+                <img src="assets/Images/Photo-gallery-3.jpg" class="photo-img__img" alt="photos-img">
             </div>
-            <div class="photos-imgs">
-                <img src="assets/Images/Photo-gallery-4.jpg" class="photos-imgs__" alt="photos-img">
+            <div class="photo-img__">
+                <img src="assets/Images/Photo-gallery-4.jpg" class="photo-img__img" alt="photos-img">
             </div>
-            <div class="photos-imgs">
-                <img src="assets/Images/Photo-gallery-5.jpg" class="photos-imgs__" alt="photos-img">
+            <div class="photo-img__">
+                <img src="assets/Images/Photo-gallery-5.jpg" class="photo-img__img" alt="photos-img">
             </div>
-            <div class="photos-imgs">
-                <img src="assets/Images/Photo-gallery-6.jpg" class="photos-imgs__" alt="photos-img">
+            <div class="photo-img__">
+                <img src="assets/Images/Photo-gallery-6.jpg" class="photo-img__img" alt="photos-img">
             </div>
-            <div class="photos-imgs">
-                <img src="assets/Images/Photo-gallery-7.jpg" class="photos-imgs__" alt="photos-img">
+            <div class="photo-img__">
+                <img src="assets/Images/Photo-gallery-7.jpg" class="photo-img__img" alt="photos-img">
             </div>
-            <div class="photos-imgs">
-                <img src="assets/Images/Photo-gallery-8.jpg" class="photos-imgs__" alt="photos-img">
+            <div class="photo-img__">
+                <img src="assets/Images/Photo-gallery-8.jpg" class="photo-img__img" alt="photos-img">
             </div>
-            <div class="photos-imgs">
-                <img src="assets/Images/Photo-gallery-9.jpg" class="photos-imgs__" alt="photos-img">
+            <div class="photo-img__">
+                <img src="assets/Images/Photo-gallery-9.jpg" class="photo-img__img" alt="photos-img">
             </div>
         </div>
     </section>
