--- a/index.html
+++ b/index.html
@@ -34,50 +34,54 @@
     <!-- About-Section -->
     <section class="about">
         <h1 class="about__header">About the Musicians</h1>
-        <div class="about-band">
-            <img src="assets/Images/band.jpg" class="about-band__img" alt="band-img">
-        </div>
 
-        <div class="about-quote">
-            <p class="about-quote__text">“We push each other to be the best. It’s not uncommon for
-                one of us to say ‘this needs to be better, back to the
-                drawing board’”
-            </p>
+        <div class="about-container">
 
-            <p class="about-quote__author">
-                - Bryan Teddy, lead vocalist of The Bees Knees
-            </p>
+            <div class="about-band">
+                <img src="assets/Images/band.jpg" class="about-band__img" alt="band-img">
+            </div>
 
-            <h3 class="about-quote__the-bees">The Bees Knees</h3>
-            <div class="tablet-about">
-                <div class="tablet-about__text">
-                    <p class="about-text">
-                        The Bees Knees is a pop rock band originating from San
-                        Francisco, California. The band consists of lead vocalist
-                        an Teddy, guitarist Mack Tolkens, guitarist Andrew Green,
-                        bassist Kent Zulkee and drummer Freddie Fischer. The band
-                        achieved its first commercial success as an unsigned act,
-                        drawing attention from manager Cam Adams. Having worked with
-                        other popular acts (The Elephant In The Room, One Trick
-                        Pony, The Cat’s Meow), Adams was confident the band could
-                        succeed even further, pushing them to sign with Magenta
-                        Records.
-                    </p>
-                </div>
-                <div class="tablet-about__text1">
-                    <p class="about-text">
-                        From there, the band has soared, gaining international
-                        recognition and ranking in the top 10 on the Poster
-                        Charts. New fans immediately fell in love with the
-                        band’s original and organic attitude, solidifying
-                        their place as one of the hottest and fastest up
-                        and coming acts of this century. Fans affectionately
-                        refer to themselves as “The Hive” and are drawn to
-                        their candid and authentic performances on stage.
-                        Looking forward to touring in the future, The Bees
-                        Knees are currently recording their second studio album,
-                        looking to be released in late 2021.
-                    </p>
+            <div class="about-quote">
+                <p class="about-quote__text">“We push each other to be the best. It’s not uncommon for
+                    one of us to say ‘this needs to be better, back to the
+                    drawing board’”
+                </p>
+
+                <p class="about-quote__author">
+                    - Bryan Teddy, lead vocalist of The Bees Knees
+                </p>
+
+                <h3 class="about-quote__the-bees">The Bees Knees</h3>
+                <div class="about-quote__description">
+                    <div class="tablet-about__text">
+                        <p class="about-text">
+                            The Bees Knees is a pop rock band originating from San
+                            Francisco, California. The band consists of lead vocalist
+                            an Teddy, guitarist Mack Tolkens, guitarist Andrew Green,
+                            bassist Kent Zulkee and drummer Freddie Fischer. The band
+                            achieved its first commercial success as an unsigned act,
+                            drawing attention from manager Cam Adams. Having worked with
+                            other popular acts (The Elephant In The Room, One Trick
+                            Pony, The Cat’s Meow), Adams was confident the band could
+                            succeed even further, pushing them to sign with Magenta
+                            Records.
+                        </p>
+                    </div>
+                    <div class="tablet-about__text1">
+                        <p class="about-text">
+                            From there, the band has soared, gaining international
+                            recognition and ranking in the top 10 on the Poster
+                            Charts. New fans immediately fell in love with the
+                            band’s original and organic attitude, solidifying
+                            their place as one of the hottest and fastest up
+                            and coming acts of this century. Fans affectionately
+                            refer to themselves as “The Hive” and are drawn to
+                            their candid and authentic performances on stage.
+                            Looking forward to touring in the future, The Bees
+                            Knees are currently recording their second studio album,
+                            looking to be released in late 2021.
+                        </p>
+                    </div>
                 </div>
             </div>
         </div>
@@ -174,7 +178,7 @@
                     </div>
 
                     <p class="copyright">
-                        Copyright The Bees Knees © 2021 All Rights Reserved
+                        &copy The Bees Knees © 2021 All Rights Reserved
                     </p>
                 </div>
             </article>
