added scss styles to photos tablet section

--- a/index.html
+++ b/index.html
@@ -52,8 +52,8 @@
                 </p>
 
                 <h3 class="about-quote__the-bees">The Bees Knees</h3>
-                <div class="about-quote__description">
-                    <div class="tablet-about__text">
+                <div class="about-quote__container">
+                    <div class="about-quote__container__text">
                         <p class="about-text">
                             The Bees Knees is a pop rock band originating from San
                             Francisco, California. The band consists of lead vocalist
@@ -67,7 +67,7 @@
                             Records.
                         </p>
                     </div>
-                    <div class="tablet-about__text1">
+                    <div class="about-quote__container__text1">
                         <p class="about-text">
                             From there, the band has soared, gaining international
                             recognition and ranking in the top 10 on the Poster
@@ -91,33 +91,52 @@
     <section class="photo">
         <h1 class="photo-title">Photo Gallery</h1>
         <div class="photo-imgs">
-            <div class="photo-img__">
-                <img src="assets/Images/Photo-gallery-1.jpg" class="photo-img__img" alt="photos-img">
+            <div class="photo-imgs__column">
+                <div class="photo-imgs__column__img">
+                    <img src="assets/Images/Photo-gallery-1.jpg" class="photo-img__img" alt="photos-img">
+                </div>
             </div>
-            <div class="photo-img__">
-                <img src="assets/Images/Photo-gallery-2.jpg" class="photo-img__img" alt="photos-img">
+            <div class="photo-imgs__column">
+                <div class="photo-imgs__column__img">
+                    <img src="assets/Images/Photo-gallery-2.jpg" class="photo-img__img" alt="photos-img">
+                </div>
             </div>
-            <div class="photo-img__">
-                <img src="assets/Images/Photo-gallery-3.jpg" class="photo-img__img" alt="photos-img">
+            <div class="photo-imgs__column">
+                <div class="photo-imgs__column__img">
+                    <img src="assets/Images/Photo-gallery-3.jpg" class="photo-img__img" alt="photos-img">
+                </div>
             </div>
-            <div class="photo-img__">
-                <img src="assets/Images/Photo-gallery-4.jpg" class="photo-img__img" alt="photos-img">
+            <div class="photo-imgs__column">
+                <div class="photo-imgs__column__img">
+                    <img src="assets/Images/Photo-gallery-4.jpg" class="photo-img__img" alt="photos-img">
+                </div>
             </div>
-            <div class="photo-img__">
-                <img src="assets/Images/Photo-gallery-5.jpg" class="photo-img__img" alt="photos-img">
+            <div class="photo-imgs__column">
+                <div class="photo-imgs__column__img">
+                    <img src="assets/Images/Photo-gallery-5.jpg" class="photo-img__img" alt="photos-img">
+                </div>
             </div>
-            <div class="photo-img__">
-                <img src="assets/Images/Photo-gallery-6.jpg" class="photo-img__img" alt="photos-img">
+            <div class="photo-imgs__column">
+                <div class="photo-imgs__column__img">
+                    <img src="assets/Images/Photo-gallery-6.jpg" class="photo-img__img" alt="photos-img">
+                </div>
             </div>
-            <div class="photo-img__">
-                <img src="assets/Images/Photo-gallery-7.jpg" class="photo-img__img" alt="photos-img">
+            <div class="photo-imgs__column">
+                <div class="photo-imgs__column__img">
+                    <img src="assets/Images/Photo-gallery-7.jpg" class="photo-img__img" alt="photos-img">
+                </div>
             </div>
-            <div class="photo-img__">
-                <img src="assets/Images/Photo-gallery-8.jpg" class="photo-img__img" alt="photos-img">
+            <div class="photo-imgs__column">
+                <div class="photo-imgs__column__img">
+                    <img src="assets/Images/Photo-gallery-8.jpg" class="photo-img__img" alt="photos-img">
+                </div>
             </div>
-            <div class="photo-img__">
-                <img src="assets/Images/Photo-gallery-9.jpg" class="photo-img__img" alt="photos-img">
+            <div class="photo-imgs__column">
+                <div class="photo-imgs__column__img">
+                    <img src="assets/Images/Photo-gallery-9.jpg" class="photo-img__img" alt="photos-img">
+                </div>
             </div>
+
         </div>
     </section>
 
