added scss styles to footer tablet section

--- a/index.html
+++ b/index.html
@@ -160,36 +160,43 @@
                 </div>
             </div>
 
-            <article class="footer-info__socials">
-                <ul class="footer-list">
-                    <li class="footer-list__name1">Cam Adams</li>
-                    <li class="footer-list__name2">The Bees Knees Management</li>
+            <div class="footer-info__socials">
+                <div class="footer-info__socails__tablet">
+                    <div class="footer-info__socials__container">
+                        <ul class="footer-list">
+                            <li class="footer-list__name1">Cam Adams</li>
+                            <li class="footer-list__name2">The Bees Knees Management</li>
 
-                    <li class="footer-list__general1">503 Broadway Penthouse,</li>
-                    <li class="footer-list__general2">New York, NY 10012, USA</li>
+                            <li class="footer-list__general1">503 Broadway Penthouse,</li>
+                            <li class="footer-list__general2">New York, NY 10012, USA</li>
 
-                    <li class="footer-list__email">info@thebeesknees.com</li>
-                </ul>
+                            <li class="footer-list__email">info@thebeesknees.com</li>
+                        </ul>
+                    </div>
 
-                <ul class="footer-list">
-                    <li class="footer-list__name1">Pearl Gregg</li>
-                    <li class="footer-list__name2">Limitless Artist Group</li>
+                    <div class="footer-info__socials__container">
+                        <ul class="footer-list">
+                            <li class="footer-list__name1">Pearl Gregg</li>
+                            <li class="footer-list__name2">Limitless Artist Group</li>
 
-                    <li class="footer-list__general">Booking Agent for</li>
-                    <li class="footer-list__general2">US / South America / Japan</li>
+                            <li class="footer-list__general">Booking Agent for</li>
+                            <li class="footer-list__general2">US / South America / Japan</li>
 
-                    <li class="footer-list__email">pearl.gregg@limitlessag.com</li>
-                </ul>
+                            <li class="footer-list__email">pearl.gregg@limitlessag.com</li>
+                        </ul>
+                    </div>
+                    <div class="footer-info__socials__container">
+                        <ul class="footer-list">
+                            <li class="footer-list__name1">Carson Whyte</li>
+                            <li class="footer-list__name2">ARCH Entertainment</li>
 
-                <ul class="footer-list">
-                    <li class="footer-list__name1">Carson Whyte</li>
-                    <li class="footer-list__name2">ARCH Entertainment</li>
+                            <li class="footer-list__general">Booking Agent for</li>
+                            <li class="footer-list__general2">UK / EU / AU</li>
 
-                    <li class="footer-list__general">Booking Agent for</li>
-                    <li class="footer-list__general2">UK / EU / AU</li>
-
-                    <li class="footer-list__email">cwhyte@archentertainment.com</li>
-                </ul>
+                            <li class="footer-list__email">cwhyte@archentertainment.com</li>
+                        </ul>
+                    </div>
+                </div>
 
                 <div class="footer-logo__mobile">
                     <div class="footer-logo">
@@ -200,7 +207,7 @@
                         &copy The Bees Knees © 2021 All Rights Reserved
                     </p>
                 </div>
-            </article>
+
             </div>
         </footer>
     </section>
