--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
         <section class="header__logo"></section>
         <div class="header__wrapper">
             <nav class="nav">
-                <a href="#" class="nav__link">Biography</a>
-                <a href="#" class="nav__link">Shows</a>
+                <button class="nav__button"><a href="#" class="nav__link">Biography</a></button>
+                <button class="nav__button"><a href="#" class="nav__link">Shows</a></button>
             </nav>
         </div>
     </header>
