--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./styles/bio.css" rel="stylesheet" />
-    <title>Bandsite</title>
+    <title>Isaiah Mckenzie - Bandsite</title>
 </head>
 
 <body>
