--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="./styles/bio.css" rel="stylesheet" />
-    <title>Isaiah Mckenzie - Bandsite</title>
+    <title>Isaiah Mckenzie - Biography</title>
 </head>
 
 <body>
@@ -16,8 +16,8 @@
         <section class="header__logo"></section>
         <div class="header__wrapper">
             <nav class="nav">
-                <button class="nav__button"><a href="#" class="nav__link">Biography</a></button>
-                <button class="nav__button"><a href="#" class="nav__link">Shows</a></button>
+                <button class="nav__button"><a href="./index.html" class="nav__link">Biography</a></button>
+                <button class="nav__button"><a href="./pages/shows.html" class="nav__link">Shows</a></button>
             </nav>
         </div>
     </header>
@@ -139,6 +139,8 @@
 
         </div>
     </section>
+
+    
 
     <!-- Footer-Section -->
     <section class="footer">
