added basic shows section no sccs

--- a/index.html
+++ b/index.html
@@ -140,7 +140,15 @@
         </div>
     </section>
 
-    
+    <!-- JTC-Section -->
+    <section class="shows">
+        <h1 class="shows-title">Join the Conversation</h1>
+        <!-- Avatar picture, A promt for the user to enter their name and comment,
+            ++ a button to sumbit the comment-->
+
+        <!-- other users comments below user's container to put their comment  -->
+
+    </section>
 
     <!-- Footer-Section -->
     <section class="footer">
