--- a/pages/shows.html
+++ b/pages/shows.html
@@ -23,7 +23,7 @@
     </header>
 
     <section class="shows">
-        <h1 class="shows-title">Join the Conversation</h1>
+        <h1 class="shows-title">Shows</h1>
         <!-- Avatar picture, A promt for the user to enter their name and comment,
             ++ a button to sumbit the comment-->
 
