added base html for shows-section

--- a/index.html
+++ b/index.html
@@ -143,24 +143,24 @@
     <!-- JTC-Section -->
     <section class="shows">
         <form method="GET" id="order-form">
+
             <h1 class="shows-title">Join the Conversation</h1>
+
             <div class="form-container">
-                <label class="form-label">Name</label>
-                <input class="form-input"  name="name" type="text"
+                <div class="form-continer__avatar"></div>
+
+                <label class="form-label" for="name">Name</label>
+                <input class="form-input"  id="name" type="text"
                 placeholder="Enter your name">
-                </label>
             </div>
 
-            <div class="form-container2">
+            <div>
                 <label class="form-label">Comment</label>
-                <input class="form-input"  name="name" type="text"
-                placeholder="Add a new comment">
-                </label>
+                <textarea class="form-input form-textarea" name="adress" id="adress"   placeholder="Add a new comment"></textarea></textarea>
+               
             </div>
 
             <button class="shows-comment__btn">Comment</button>
-
-
         </form>
 
 
