--- a/pages/shows.html
+++ b/pages/shows.html
@@ -102,7 +102,6 @@
         </div>
     </footer>
 </section>
-<script src="build-shows-page.js"></script>
-<script src="index-page.js"></script>
+<script src="../scripts/build-shows-page.js"></script>
 </body>
 </html>
