added basic shows section to shows.html

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -24,6 +24,20 @@
 
     <section class="shows">
         <h1 class="shows-title">Shows</h1>
+        <ul class="shows-date">
+            <li class=shows-dates__></li>
+        </ul>
+        <ul class="shows-venue">
+            <li class=shows-venue__></li>
+        </ul>
+        <ul class="shows-locatio">
+            <li class=shows-location__></li>
+        </ul>
+
+        <button class="shows-btn">
+        </button>
+
+        
         <!-- Avatar picture, A promt for the user to enter their name and comment,
             ++ a button to sumbit the comment-->
 
