added styles to text boxes

--- a/index.html
+++ b/index.html
@@ -180,12 +180,12 @@
             <div class="shows-top">
 
 
-                <div class="left">
+                <div class="shows-top__left">
                     <img src="assets/Images/Mohan-muruge.jpg" class="shows-container__left__img"
                         alt="shows-container__img">
                 </div>
 
-                <div class="right">
+                <div class="shows-top__right">
 
                     <div class="shows-top__container">
                         <label class="shows-top__container__name">Name</label>
@@ -214,12 +214,7 @@
 
             <section class="shows-container">
 
-
-
             </section>
-
-
-   
 
 
 
