--- a/pages/shows.html
+++ b/pages/shows.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="../styles/shows.css" rel="stylesheet"/>
+    <link href="../styles/shows.css" rel="stylesheet" />
     <title>Isaiah Mckenzie - Shows</title>
 </head>
 
@@ -23,99 +23,87 @@
     </header>
 
     <section class="shows">
-        <h1 class="shows-title">Shows</h1>
-        <ul class="shows-date">
-            <li class=shows-dates__></li>
-        </ul>
-        <ul class="shows-venue">
-            <li class=shows-venue__></li>
-        </ul>
-        <ul class="shows-locatio">
-            <li class=shows-location__></li>
-        </ul>
 
-        <button class="shows-btn">
-        </button>
+
 
         
-        <!-- Avatar picture, A promt for the user to enter their name and comment,
-            ++ a button to sumbit the comment-->
-
-        <!-- other users comments below user's container to put their comment  -->
-
+        <form method="GET" id="shows-page">
+      
+        </form>
     </section>
 
- <!-- Footer-Section -->
- <section class="footer">
-    <footer>
-        <div class="footer-info">
-            <h1 class="footer-title">Get in Touch</h1>
+    <!-- Footer-Section -->
+    <section class="footer">
+        <footer>
+            <div class="footer-info">
+                <h1 class="footer-title">Get in Touch</h1>
 
-            <div class="footer-info__websites">
-                <article class="footer-info__instagram">
-                </article>
+                <div class="footer-info__websites">
+                    <article class="footer-info__instagram">
+                    </article>
 
-                <article class="footer-info__facebook">
-                </article>
+                    <article class="footer-info__facebook">
+                    </article>
 
-                <article class="footer-info__twitter">
-                </article>
-            </div>
-            <div class="footer-logo__tablet">
-            </div>
-        </div>
-
-        <div class="footer-info__socials">
-            <div class="footer-info__socails__tablet">
-                <div class="footer-info__socials__container">
-                    <ul class="footer-list">
-                        <li class="footer-list__name1">Cam Adams</li>
-                        <li class="footer-list__name2">The Bees Knees Management</li>
-
-                        <li class="footer-list__general1">503 Broadway Penthouse,</li>
-                        <li class="footer-list__general2">New York, NY 10012, USA</li>
-
-                        <li class="footer-list__email">info@thebeesknees.com</li>
-                    </ul>
+                    <article class="footer-info__twitter">
+                    </article>
                 </div>
-
-                <div class="footer-info__socials__container">
-                    <ul class="footer-list">
-                        <li class="footer-list__name1">Pearl Gregg</li>
-                        <li class="footer-list__name2">Limitless Artist Group</li>
-
-                        <li class="footer-list__general">Booking Agent for</li>
-                        <li class="footer-list__general2">US / South America / Japan</li>
-
-                        <li class="footer-list__email">pearl.gregg@limitlessag.com</li>
-                    </ul>
-                </div>
-                <div class="footer-info__socials__container">
-                    <ul class="footer-list">
-                        <li class="footer-list__name1">Carson Whyte</li>
-                        <li class="footer-list__name2">ARCH Entertainment</li>
-
-                        <li class="footer-list__general">Booking Agent for</li>
-                        <li class="footer-list__general2">UK / EU / AU</li>
-
-                        <li class="footer-list__email">cwhyte@archentertainment.com</li>
-                    </ul>
+                <div class="footer-logo__tablet">
                 </div>
             </div>
 
-            <div class="footer-logo__mobile">
-                <div class="footer-logo">
+            <div class="footer-info__socials">
+                <div class="footer-info__socails__tablet">
+                    <div class="footer-info__socials__container">
+                        <ul class="footer-list">
+                            <li class="footer-list__name1">Cam Adams</li>
+                            <li class="footer-list__name2">The Bees Knees Management</li>
 
+                            <li class="footer-list__general1">503 Broadway Penthouse,</li>
+                            <li class="footer-list__general2">New York, NY 10012, USA</li>
+
+                            <li class="footer-list__email">info@thebeesknees.com</li>
+                        </ul>
+                    </div>
+
+                    <div class="footer-info__socials__container">
+                        <ul class="footer-list">
+                            <li class="footer-list__name1">Pearl Gregg</li>
+                            <li class="footer-list__name2">Limitless Artist Group</li>
+
+                            <li class="footer-list__general">Booking Agent for</li>
+                            <li class="footer-list__general2">US / South America / Japan</li>
+
+                            <li class="footer-list__email">pearl.gregg@limitlessag.com</li>
+                        </ul>
+                    </div>
+                    <div class="footer-info__socials__container">
+                        <ul class="footer-list">
+                            <li class="footer-list__name1">Carson Whyte</li>
+                            <li class="footer-list__name2">ARCH Entertainment</li>
+
+                            <li class="footer-list__general">Booking Agent for</li>
+                            <li class="footer-list__general2">UK / EU / AU</li>
+
+                            <li class="footer-list__email">cwhyte@archentertainment.com</li>
+                        </ul>
+                    </div>
                 </div>
 
-                <p class="copyright">
-                    &copy The Bees Knees © 2021 All Rights Reserved
-                </p>
-            </div>
+                <div class="footer-logo__mobile">
+                    <div class="footer-logo">
 
-        </div>
-    </footer>
-</section>
-<script src="../scripts/build-shows-page.js"></script>
+                    </div>
+
+                    <p class="copyright">
+                        &copy The Bees Knees © 2021 All Rights Reserved
+                    </p>
+                </div>
+
+            </div>
+        </footer>
+    </section>
+    <script src="../scripts/build-shows-page.js"></script>
 </body>
+
 </html>
