added styling to javascript

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -23,12 +23,8 @@
     </header>
 
     <section class="shows">
-
-
-
-        
         <form method="GET" id="shows-page">
-      
+            <h1 class="shows-title">Shows</h1>
         </form>
     </section>
 
