--- a/pages/shows.html
+++ b/pages/shows.html
@@ -22,6 +22,22 @@
         </div>
     </header>
 
+      <!-- Hero-Section -->
+    <section class="hero">
+        <container class="hero__container">
+            <h1 class="hero__title">Beautful Beasts Album <br><br>Queen of Yellow x For The Stings</h1>
+            <img src="../assets/Images/hero-shows.jpg" class="hero__img" alt="hero__img">
+
+            <div class="hero__music">
+                <iframe class="hero__soundcloud" scrolling="no" frameborder="no" allow="autoplay" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/574858791&color=%23ff00d6&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+            </div>
+
+
+        </container>
+  
+      
+    </section>
+
     <section class="shows">
         <form method="GET" id="shows-page">
             <h1 class="shows-title">Shows</h1>
