finished shows-mobile

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -26,7 +26,7 @@
 
       <!-- Hero-Section -->
     <section class="hero">
-        <h1 class="hero__title">Beautful Beasts Album <br><br>Queen of Yellow x For The Stings</h1>
+        <h1 class="hero__title">Beautful Beasts Album <br><br>Queen of Yellow X<br> For The Stings</h1>
         <container class="hero__container">
             <img src="../assets/Images/hero-shows.jpg" class="hero__img" alt="hero__img">
 
