added styles to index-tablet

--- a/index.html
+++ b/index.html
@@ -223,7 +223,7 @@
     </section>
 
 
-    <hr class="hr"></hr>
+    <hr class="shows-hr"></hr>
     <!-- Footer-Section -->
     <section class="footer">
         <footer>
