removed some old index/shows html cold

--- a/index.html
+++ b/index.html
@@ -141,39 +141,6 @@
         </div>
     </section>
 
-    <!-- JTC-Section -->
-    <!-- <section class="shows">
-        <form method="GET" id="shows-form">
-            <h1 class="shows-title">Join the Conversation</h1>
-            <div class="shows-container">
-
-                <div class="shows-container__left">
-                    <img src="assets/Images/Mohan-muruge.jpg" class="shows-container__left__img" alt="shows-container__img">
-                </div>
-
-                <div class="shows-container__right">
-
-                    <label class="shows-container__right__name">Name</label>
-
-                    <div class="shows-container__right__text-box">
-                        <input class="shows-container__right__text-box1" type="text" placeholder="Enter your name">
-                    </div>
-
-                    <label class="shows-container__right__comment">Comment</label>
-
-                    <div class="shows-container__right__comment-box">
-                        <input class="shows-container__right__comment-box1" name="text"
-                            placeholder="Add a new comment">
-                    </div>
-
-                    <button class="shows-comment__right__btn">Comment</button>
-                </div>
-            </div>
-
-            <ul class="shows-oldComments" id="shows-comments">
-            </ul>
-        </form>
-    </section> -->
     <section class="shows">
         <form method="GET" id="shows-form">
             <h1 class="shows-title">Join the Conversation</h1>
@@ -204,14 +171,6 @@
                 </div>
 
             </div>
-          
-            <!-- 
-                <div class="shows-left">
-                    <img src="assets/Images/Mohan-muruge.jpg" class="shows-container__left__img" alt="shows-container__img">
-                    <img src="assets/Images/Mohan-muruge.jpg" class="shows-container__left__img" alt="shows-container__img">
-                    <img src="assets/Images/Mohan-muruge.jpg" class="shows-container__left__img" alt="shows-container__img">
-    
-                </div> -->
 
             <section class="shows-container">
 
@@ -223,7 +182,8 @@
     </section>
 
 
-    <hr class="shows-hr"></hr>
+    <hr class="shows-hr">
+    </hr>
     <!-- Footer-Section -->
     <section class="footer">
         <footer>
