--- a/index.html
+++ b/index.html
@@ -14,7 +14,9 @@
     <!-- Bandsite Nav -->
 
     <header class="header">
-        <section class="header__logo"></section>
+        <a href="index.html">
+            <section class="header__logo"></section>
+        </a>
         <div class="header__wrapper">
             <nav class="nav">
                 <button class="nav__button"><a href="./index.html" class="nav__link">Biography</a></button>
@@ -27,9 +29,11 @@
     <!-- Hero-Section -->
     <section class="hero">
         <h1 class="hero__title">The Bees Knees</h1>
+        <div class="hero-img-overlay"></div>
         <div class="hero-img">
             <img src="assets/Images/hero-bio.jpg" class="hero__img" alt="hero__img">
         </div>
+
     </section>
 
     <!-- About-Section -->
@@ -141,6 +145,7 @@
         </div>
     </section>
 
+    <!-- Shows -->
     <section class="shows">
         <form method="GET" id="shows-form">
             <h1 class="shows-title">Join the Conversation</h1>
@@ -156,17 +161,17 @@
                 <div class="shows-top__right">
 
                     <div class="shows-top__container">
-                        <label class="shows-top__container__name">Name</label>
+                        <label class="shows-top__container__name">NAME</label>
                         <input class="shows-top__container__name__text-box" type="text" placeholder="Enter your name">
                     </div>
 
                     <div class="shows-middle__container">
-                        <label class="shows-container__comment">Comment</label>
+                        <label class="shows-container__comment">COMMENT</label>
                         <input class="shows-container__comment-box" name="text" placeholder="Add a new comment">
                     </div>
 
                     <div class="shows-bottom__container">
-                        <button class="shows-comment__right__btn">Comment</button>
+                        <button class="shows-comment__right__btn">COMMENT</button>
                     </div>
                 </div>
 
@@ -243,9 +248,11 @@
                 </div>
 
                 <div class="footer-logo__mobile">
-                    <div class="footer-logo">
+                    <a href="index.html">
+                        <div class="footer-logo">
 
-                    </div>
+                        </div>
+                    </a>
 
                     <p class="copyright">
                         &copy The Bees Knees © 2021 All Rights Reserved
