--- a/pages/shows.html
+++ b/pages/shows.html
@@ -28,16 +28,16 @@
     <section class="hero">
 
         <h2 class="hero__subTitle">Beautful Beasts Album</h2>
-        <h1 class="hero__title">Queen of Yellow X<br> For The Stings</h1>
+        <h1 class="hero__title">Queen of Yellow x<br> For The Stings</h1>
 
+
+        <div class="hero-img-overlay"></div>
         <container class="hero__container">
             <img src="../assets/Images/hero-shows.jpg" class="hero__img" alt="hero__img">
 
             <div class="hero__music">
-
-                <iframe class="hero__soundcloud" width="100%" height="166" scrolling="no" frameborder="no"
-                    allow="autoplay"
-                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/326573886&color=%23ff00d6&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                <iframe class="hero__soundcloud" scrolling="no" frameborder="no" allow="autoplay" 
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/326573886&color=%23cc21c5&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
             </div>
 
 
