--- a/pages/shows.html
+++ b/pages/shows.html
@@ -15,7 +15,9 @@
     <!-- Bandsite Nav -->
 
     <header class="header">
-        <section class="header__logo"></section>
+        <a href="../index.html">
+            <section class="header__logo"></section>
+        </a>
         <div class="header__wrapper">
             <nav class="nav">
                 <button class="nav__button"><a href="../index.html" class="nav__link">Biography</a></button>
@@ -36,8 +38,8 @@
             <img src="../assets/Images/hero-shows.jpg" class="hero__img" alt="hero__img">
 
             <div class="hero__music">
-                <iframe class="hero__soundcloud" scrolling="no" frameborder="no" allow="autoplay" 
-                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/326573886&color=%23cc21c5&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
+                <iframe class="hero__soundcloud" scrolling="no" frameborder="no" allow="autoplay"
+                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/326573886&color=%23cc21c5&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true"></iframe>
             </div>
 
 
@@ -111,9 +113,11 @@
                 </div>
 
                 <div class="footer-logo__mobile">
-                    <div class="footer-logo">
+                    <a href="../index.html">
+                        <div class="footer-logo">
 
-                    </div>
+                        </div>
+                    </a>
 
                     <p class="copyright">
                         &copy The Bees Knees © 2021 All Rights Reserved
