almost finished tablet-shows

--- a/pages/shows.html
+++ b/pages/shows.html
@@ -44,6 +44,7 @@
 
 
         </container>
+        
 
 
     </section>
@@ -51,6 +52,13 @@
     <section class="shows">
         <form method="GET" id="shows-page">
             <h1 class="shows-title">Shows</h1>
+            <div class="shows-tablet__row">
+                <p class="shows-tablet__row__date">DATE</p>
+                <p class="shows-tablet__row__venue">VENUE</p>
+                <p class="shows-tablet__row__location">LOCATION</p>
+                <p class="shows-tablet__row__invis"></p>
+                <p class="shows-tablet__row__invis"></p>
+            </div>
         </form>
     </section>
 
