--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./styles/bio.css" rel="stylesheet" />
+    <link href="./styles/bio.css" rel="stylesheet"/>
     <title>Isaiah Mckenzie - Biography</title>
+    <script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
 </head>
 
 <body>
@@ -161,30 +162,27 @@
                 <div class="shows-top__right">
 
                     <div class="shows-top__container">
-                        <label class="shows-top__container__name">NAME</label>
-                        <input class="shows-top__container__name__text-box" type="text" placeholder="Enter your name">
+                        <label class="shows-top__container__name" for="text">NAME</label>
+                        <input class="shows-top__container__name__text-box" id="text" name="text" type="text" placeholder="Enter your name">
                     </div>
 
                     <div class="shows-middle__container">
-                        <label class="shows-container__comment">COMMENT</label>
-                        <input class="shows-container__comment-box" name="text" placeholder="Add a new comment">
+                        <label class="shows-container__comment" for="name">COMMENT</label>
+                        <input class="shows-container__comment-box" id="name" name="name" placeholder="Add a new comment">
                     </div>
 
                     <div class="shows-bottom__container">
-                        <button class="shows-comment__right__btn">COMMENT</button>
+                        <button class="shows-comment__right__btn" type="submit">COMMENT</button>
                     </div>
                 </div>
 
             </div>
 
-            <section class="shows-container">
-
-            </section>
-
-
-
-
         </form>
+        
+        <section class="shows-container" id="shows-comments">
+
+        </section>
         <hr class="shows-hr">
         </hr>
     </section>
